--- a/fifa messy data/fifa project version 1.ipynb
+++ b/fifa messy data/fifa project version 1.ipynb
@@ -15,6 +15,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OVA :c Offensive Value\n",
+    "#POT : Potential\n",
+    "#BOV :\n",
+    "#CROSSING\n",
+    "#VOLLEY"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -123,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/97/kcf9thns5z3_g34_y6xzwgkc0000gn/T/ipykernel_1243/1419749304.py:1: DtypeWarning: Columns (76) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/97/kcf9thns5z3_g34_y6xzwgkc0000gn/T/ipykernel_8789/1419749304.py:1: DtypeWarning: Columns (76) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('fifa21 raw data v2.csv')\n"
      ]
     }
@@ -1271,7 +1284,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>370 rows × 78 columns</p>\n",
+       "<p>377 rows × 78 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1340,7 +1353,7 @@
        "17073  NaN     188.0      80.0              12.0  \n",
        "17186  NaN     175.0      60.0              13.0  \n",
        "\n",
-       "[370 rows x 78 columns]"
+       "[377 rows x 78 columns]"
       ]
      },
      "execution_count": 21,
@@ -2097,7 +2110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/97/kcf9thns5z3_g34_y6xzwgkc0000gn/T/ipykernel_1243/898775851.py:4: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "/var/folders/97/kcf9thns5z3_g34_y6xzwgkc0000gn/T/ipykernel_8789/898775851.py:4: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  if '★' in df[col].values:\n"
      ]
     }
