uncommented reset index

--- a/fifa messy data/fifa project version 1.ipynb
+++ b/fifa messy data/fifa project version 1.ipynb
@@ -1094,7 +1094,7 @@
     "    df = df.drop(outlier_indices)\n",
     "    \n",
     "    # Reset the index of the DataFrame\n",
-    "    #df = df.reset_index(drop=True)\n",
+    "    df = df.reset_index(drop=True)\n",
     "    \n",
     "    # Re-calculate the Z-scores for numeric columns\n",
     "    outlier_indices = []\n",
