--- a/fifa messy data/fifa project version 1.ipynb
+++ b/fifa messy data/fifa project version 1.ipynb
@@ -12463,20 +12463,19 @@
    "source": [
     "#linear regression\n",
     "\n",
-    "# Create the features and target DataFrames\n",
-    "X = df4.drop('Wage_formatted', axis=1) # Features, also known as X, are the independent variables\n",
+    "\n",
+    "X = df4.drop('Wage_formatted', axis=1) # variables indépendantes, aussi appelées X, sont les variables qui influencent la variable dépendante, celle que l'on veut prédire\n",
     "y = df4['Wage_formatted'] # Target, also known as y, is the dependent variable, the one we want to predict\n",
     "\n",
-    "# Split the data into training and test sets\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=123) # 70% training and 30% test\n",
     "\n",
-    "# Create the regressor: reg_all\n",
+    "\n",
     "reg_all = LinearRegression()\n",
     "\n",
-    "# Fit the regressor to the training data\n",
     "reg_all.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test data: y_pred\n",
+    "\n",
     "y_pred = reg_all.predict(X_test)\n",
     "\n",
     "# Compute and print R^2 and RMSE\n",
