--- a/fifa messy data/projet2.ipynb
+++ b/fifa messy data/projet2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1295,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x7fed4f2d2c10>"
+       "<seaborn.axisgrid.JointGrid at 0x7f9a29d12c70>"
       ]
      },
      "execution_count": 21,
@@ -1389,7 +1389,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fed4f409760>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9a2db0b160>"
       ]
      },
      "execution_count": 23,
@@ -1585,7 +1585,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x7fed4f739d90>"
+       "<seaborn.axisgrid.JointGrid at 0x7f9a2ae98490>"
       ]
      },
      "execution_count": 25,
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2319,7 @@
        "[18979 rows x 74 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2701,7 @@
        "[18979 rows x 60 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,7 +2712,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8796.129933083936"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_num['Wage'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2734,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2748,30 +2768,21 @@
    ],
    "source": [
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=123) # 70% training and 30% test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=123) # ce qu'on fait içi c'est de séparer notre dataset en deux parties, une pour l'entrainement et une pour le test\n",
     "\n",
     "\n",
-    "reg_all = LinearRegression()\n",
+    "reg_all = LinearRegression() # on crée un objet  LinearRegression\n",
     "\n",
-    "reg_all.fit(X_train, y_train)\n",
+    "reg_all.fit(X_train, y_train) # on entraine notre modèle sur les données d'entrainement@\n",
     "\n",
     "\n",
-    "y_pred = reg_all.predict(X_test)\n",
+    "y_pred = reg_all.predict(X_test) # on prédit les valeurs de y pour les données de test\n",
     "\n",
     "# Compute and print R^2 and RMSE\n",
-    "print(\"R^2: {}\".format(reg_all.score(X_test, y_test))) # R^2 is the coefficient of determination, it is a statistical measure of how close the data are to the fitted regression line\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, y_pred)) # RMSE is the Root Mean Squared Error, it is the standard deviation of the residuals (prediction errors)\n",
+    "print(\"R^2: {}\".format(reg_all.score(X_test, y_test))) # R^2 est le coefficient de détermination, il est compris entre 0 et 1, plus il est proche de 1 plus la régression est bonne\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred)) # RMSE est la racine carrée de la moyenne des erreurs au carré, c'est une mesure de la précision de la régression\n",
     "print(\"Root Mean Squared Error: {}\".format(rmse))\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print"
    ]
   },
   {
@@ -2784,15 +2795,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2: 0.5417274152099525\n",
-      "Root Mean Squared Error: 12335.285791306738\n"
+      "R^2: 0.5614337399606346\n",
+      "Root Mean Squared Error: 12067.154854845961\n"
      ]
     }
    ],
@@ -2800,7 +2811,7 @@
     "#decision tree regressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "# Create Decision Tree classifer object # créer un objet de type DecisionTreeRegressor\n",
+    "# Créer un objet DecisionTreeRegressor\n",
     "clf = DecisionTreeRegressor()\n",
     "\n",
     "# Train Decision Tree Classifer\n",
@@ -2827,15 +2838,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2: 0.7828939274697664\n",
-      "Root Mean Squared Error: 8490.304432641415\n"
+      "R^2: 0.780025315036369\n",
+      "Root Mean Squared Error: 8546.211363435305\n"
      ]
     }
    ],
@@ -2869,15 +2880,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2: 0.7671472526141918\n",
-      "Root Mean Squared Error: 8792.815502130265\n"
+      "R^2: 0.7680161100753939\n",
+      "Root Mean Squared Error: 8776.395590001062\n"
      ]
     }
    ],
@@ -2912,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2955,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2998,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3033,11 +3044,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "#ok, expliquons tous les modèles que nous avons utilisés et leurs résultats\n",
+    "#LinearRegression :\n",
+    "#R^2: 0.764: c'est un score assez bon, mais on peut faire mieux, on va essayer d'améliorer ce score avec d'autres modèles,"
    ]
   }
  ],
