--- a/fifa messy data/projet2.ipynb
+++ b/fifa messy data/projet2.ipynb
@@ -3052,6 +3052,20 @@
     "#LinearRegression :\n",
     "#R^2: 0.764: c'est un score assez bon, mais on peut faire mieux, on va essayer d'améliorer ce score avec d'autres modèles,"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#expliquons ce qu'on a fait içi, on a séparé notre dataset en deux parties, \n",
+    "#une pour l'entrainement et une pour le test, \n",
+    "#on a entrainé notre modèle sur les données d'entrainement et on a prédit les valeurs de y pour les données de test, \n",
+    "#ensuite on a calculé le R^2 et le RMSE, \n",
+    "#le R^2 est le coefficient de détermination, il est compris entre 0 et 1, plus il est proche de 1 plus la régression est bonne, \n",
+    "#le RMSE est la racine carrée de la moyenne des erreurs au carré, c'est une mesure de la précision de la régression"
+   ]
   }
  ],
  "metadata": {
