--- a/fifa messy data/projet2.ipynb
+++ b/fifa messy data/projet2.ipynb
@@ -3066,6 +3066,20 @@
     "#le R^2 est le coefficient de détermination, il est compris entre 0 et 1, plus il est proche de 1 plus la régression est bonne, \n",
     "#le RMSE est la racine carrée de la moyenne des erreurs au carré, c'est une mesure de la précision de la régression"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the plan of the presentation is to explain what have been done on that dataset, here's the explanation of all the pprocess:\n",
+    "# we have separated our dataset into two parts, one for training and one for testing,\n",
+    "# we trained our model on the training data and we predicted the values of y for the test data,\n",
+    "# then we calculated the R ^ 2 and the RMSE,\n",
+    "# the R ^ 2 is the coefficient of determination, it is between 0 and 1, the closer it is to 1 the better the regression is,\n",
+    "# the RMSE is the square root of the mean of the squared errors, it is a measure of the accuracy of the regression\n"
+   ]
   }
  ],
  "metadata": {
