--- a/fifa messy data/projet2.ipynb
+++ b/fifa messy data/projet2.ipynb
@@ -1318,6 +1318,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2786,6 +2787,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.7393398299286815"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -2872,6 +2882,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.780025315036369"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3000,6 +3020,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R^2: 0.7806046242510777"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -3044,6 +3073,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R^2: 0.7569162887909967"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -3078,7 +3116,24 @@
     "# we trained our model on the training data and we predicted the values of y for the test data,\n",
     "# then we calculated the R ^ 2 and the RMSE,\n",
     "# the R ^ 2 is the coefficient of determination, it is between 0 and 1, the closer it is to 1 the better the regression is,\n",
-    "# the RMSE is the square root of the mean of the squared errors, it is a measure of the accuracy of the regression\n"
+    "# the RMSE is the square root of the mean of the squared errors, it is a measure of the accuracy of the regression\n",
+    "# we will try to improve this score with other models,\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#conclusion\n",
+    "#random forest regressor a le meilleur score , on peut conclure que c'est le meilleur modèle pour ce dataset\n",
+    "#pourquoi random forest regressor a le meilleur score ?\n",
+    "#parce que c'est un modèle qui combine plusieurs arbres de décision,\n",
+    "#chaque arbre de décision est un modèle de régression,\n",
+    "#chaque arbre de décision est entrainé sur un sous-ensemble de données,\n",
+    "#ensuite on fait la moyenne des prédictions de tous les arbres de décision pour avoir la prédiction finale,\n",
+    "#ce qui fait que random forest regressor est un modèle de régression très puissant,\n"
    ]
   }
  ],
